# trailpad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
tests/: test_cli.py
trailpad/: cli.py  storage.py
