[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trailpad"
version = "0.1.0"
description = "Offline note trail manager with tags, search, and export"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "soe1hom-arch" }]
license = { text = "MIT" }
dependencies = []
scripts = { trailpad = "trailpad.cli:main" }

[tool.setuptools.packages.find]
include = ["trailpad*"]

